--- a/source/sass/blocks/all-comments.scss
+++ b/source/sass/blocks/all-comments.scss
@@ -37,11 +37,11 @@
   padding-top: 9px;
 
   @include font-h4;
-  color: var(--color-text-caption);
+  color: var(--color-text, $grey-default);
   text-align: center;
 
   border-radius: 50%;
-  background-color: var(--color-bg-secondary);
+  background-color: var(--color-bg-secondary, $color-bg);
 
   @media (max-width: $mobile-max-width) {
     margin-top: 16px;
@@ -55,14 +55,14 @@
 .all-comments__item {
   padding: 24px 0;
 
-  background-image: linear-gradient($light-grey, $light-grey);
+  background-image: linear-gradient(var(--color-stroke, $light-grey), var(--color-stroke, $light-grey));
   background-position: left bottom;
   background-repeat: no-repeat;
   background-size: 100% 1px;
 
   & time {
     @include main-text;
-    color: var(--color-text-caption);
+    color: var(--color-text, $grey-default);
   }
 
   & p {
