--- a/source/sass/blocks/cookie.scss
+++ b/source/sass/blocks/cookie.scss
@@ -6,7 +6,7 @@
 
   width: 100%;
 
-  background-color: var(--color-bg-main);
+  background-color: var(--color-bg-main, $white);
   box-shadow: 0 -4px 8px rgba(46, 67, 102, 0.1);
 
   &.js_hide {
@@ -40,7 +40,7 @@
 
   font-size: rem(13px);
   line-height: 1.3;
-  color: var(--color-text-secondary);
+  color: var(--color-text, $grey);
 
   @include tablet {
     padding-bottom: 10px;
