--- a/source/sass/blocks/counter.scss
+++ b/source/sass/blocks/counter.scss
@@ -1,6 +1,6 @@
 .counter {
   padding: 24px 32px;
-  border: 1px solid var(--color-stroke);
+  border: 1px solid var(--color-stroke, $light-grey);
   border-radius: $border-radius;
 
   &--hidden {
@@ -32,14 +32,14 @@
   margin-left: 46px;
   font-size: rem(13px);
   line-height: rem(17px);
-  color: var(--color-text-caption);
+  color: var(--color-text, $grey-default);
 }
 
 .counter__item-caption {
   margin-right: 12px;
   font-size: rem(15px);
   line-height: rem(20px);
-  color: var(--color-text-main);
+  color: var(--color-text, $dark-text);
 }
 
 .counter__item-avaliable {
@@ -51,8 +51,8 @@
   padding: 0 8px;
   font-size: rem(16px);
   line-height: rem(22px);
-  color: var(--color-interactive-default);
-  background-color: var(--color-interactive-light-default);
+  color: var(--color-text, $blue-default);
+  background-color: var(--color-bg-secondary, $light-blue);
   border-radius: 50%;
 }
 
