--- a/source/sass/blocks/discussion-item.scss
+++ b/source/sass/blocks/discussion-item.scss
@@ -2,7 +2,7 @@
   display: flex;
   padding: 24px 0;
 
-  background-image: linear-gradient($light-grey, $light-grey);
+  background-image: linear-gradient(var(--color-stroke, $light-grey), var(--color-stroke, $light-grey));
   background-position: left bottom;
   background-repeat: no-repeat;
   background-size: 100% 1px;
@@ -39,7 +39,7 @@
 .discussion-item__img-wrapper {
   width: 740px;
   height: 416px;
-  background-color: var(--color-bg-secondary);
+  background-color: var(--color-bg-secondary, $color-bg);
   border-radius: 5px;
 
   @media (max-width: $desktop-width - 1) {
@@ -90,7 +90,7 @@
   @include main-text;
   font-weight: 500;
   text-decoration: none;
-  color: var(--color-text-caption);
+  color: var(--color-text, $grey-default);
 
   transition: color $style-change-duration;
 
@@ -114,6 +114,6 @@
 
   &:hover,
   &:focus {
-    color: var(--color-text-caption);
+    color: var(--color-text, $grey-default);
   }
 }
