--- a/source/sass/blocks/discussion.scss
+++ b/source/sass/blocks/discussion.scss
@@ -37,7 +37,7 @@
   padding-top: 24px;
   padding-bottom: 32px;
 
-  border-bottom: 1px solid var(--color-stroke);
+  border-bottom: 1px solid var(--color-stroke, $light-grey);
 
   @media (max-width: $desktop-width - 81) {
     padding-bottom: 31px;
@@ -53,11 +53,11 @@
     .discussion__button-star {
       display: block;
 
-      color: var(--color-interactive-default);
+      color: var(--color-interactive-default, $blue-default);
 
       &:hover,
       &:focus {
-        color: var(--color-interactive-accent);
+        color: var(--color-interactive-accent, $blue-accent);
         outline: none;
       }
     }
@@ -90,7 +90,7 @@
 
   font-size: rem(14px);
   line-height: 1.3;
-  color: var(--color-text-caption);
+  color: var(--color-text, $grey-default);
 
   &::before {
     content: "";
@@ -120,12 +120,8 @@
   }
 
   svg {
-    fill: $light-blue-accent;
+    fill: var(--color-icon, $light-blue-accent);
   }
-}
-
-.mod-theme-blue .discussion__used svg {
-  fill: currentColor;
 }
 
 .discussion__help {
@@ -140,10 +136,10 @@
 
   font-size: rem(13px);
   line-height: 1.3;
-  color: var(--color-text-main);
+  color: var(--color-text, $dark-text);
   white-space: nowrap;
 
-  background-color: var(--color-interactive-light-default);
+  background-color: var(--color-bg-secondary, $light-blue);
   border-radius: 2px;
   transform: translateX(-40%);
 
@@ -156,7 +152,7 @@
     width: 8px;
     height: 8px;
 
-    background-color: var(--color-interactive-light-default);
+    background-color: var(--color-bg-secondary, $light-blue);
     border-radius: 1px;
     transform: rotate(45deg);
   }
