--- a/source/sass/blocks/file-item.scss
+++ b/source/sass/blocks/file-item.scss
@@ -6,24 +6,24 @@
   padding: 18px 23px;
   font-size: rem(13px);
   line-height: rem(17px);
-  color: var(--color-text-main);
+  color: var(--color-text, $dark-text);
   text-decoration: none;
   user-select: none;
-  border: 1px solid var(--color-stroke);
+  border: 1px solid var(--color-stroke, $light-grey);
   border-radius: $border-radius;
   outline: none;
   transition: color $style-change-duration;
 
   &:focus {
-    color: var(--color-interactive-default);
+    color: var(--color-interactive-default, $blue-default);
   }
 
   &:focus:not(.focus-visible) {
-    color: var(--color-text-main);
+    color: var(--color-text, $dark-text);
   }
 
   &:active:not(.focus-visible) {
-    color: var(--color-interactive-default);
+    color: var(--color-interactive-default, $blue-default);
   }
 }
 
@@ -50,14 +50,14 @@
 
 .file-item__size {
   text-transform: uppercase;
-  color: var(--color-text-caption);
+  color: var(--color-text, $grey-default);
 }
 
 
 @media (min-width: $desktop-width) {
   .file-item {
     &:hover:not(.focus-visible) {
-      color: var(--color-interactive-default);
+      color: var(--color-interactive-default, $blue-default);
     }
   }
 }
