--- a/source/sass/blocks/form-radio.scss
+++ b/source/sass/blocks/form-radio.scss
@@ -19,9 +19,9 @@
     width: 20px;
     height: 20px;
     margin-right: 8px;
-    background-color: var(--color-bg-main);
+    background-color: var(--color-bg-main, $white);
     border-radius: 50%;
-    border: 1px solid rgba(161, 167, 174, 0.5);
+    border: 1px solid var(--color-stroke, rgba(161, 167, 174, 0.5));
     transition: all $style-change-duration;
   }
 }
@@ -29,7 +29,7 @@
 .form-radio input[type="radio"]:not(:checked) ~ label {
   &:hover {
     &::before {
-      border: 1px solid var(--color-interactive-accent);
+      border: 1px solid var(--color-interactive-default, $blue-accent);
     }
   }
 }
@@ -37,7 +37,7 @@
 
 .form-radio input[type="radio"]:checked ~ label {
   &::before {
-    border: 6px solid var(--color-interactive-default);
+    border: 6px solid var(--color-interactive-default, $blue-default);
   }
 }
 
@@ -46,7 +46,7 @@
   cursor: text;
 
   &::before {
-    background-color: #f9f9fa;
+    background-color: $color-bg;
   }
 
   &:hover {
