--- a/source/sass/blocks/location-switcher.scss
+++ b/source/sass/blocks/location-switcher.scss
@@ -18,7 +18,7 @@
       right: -37px;
       width: 1px;
       height: 48px;
-      background-color: #dedede;
+      background-color: var(--color-stroke, #dedede);
       transform: translateY(-50%);
       pointer-events: none;
     }
@@ -43,7 +43,7 @@
   margin-top: 3px;
   font-size: rem(13px);
   line-height: rem(15px);
-  color: var(--color-text-secondary);
+  color: var(--color-text, $grey);
 }
 
 .location-switcher__show-btn {
@@ -60,7 +60,7 @@
 @include tablet {
   .location-switcher {
     padding: 0 24px;
-    background-color: var(--color-bg-secondary);
+    background-color: var(--color-bg-secondary, $color-bg);
   }
 
   .location-switcher form {
