--- a/source/sass/blocks/news-notice.scss
+++ b/source/sass/blocks/news-notice.scss
@@ -72,7 +72,7 @@
 .news-notice__item {
   padding-top: 26px;
 
-  border-bottom: 1px solid var(--color-stroke);
+  border-bottom: 1px solid var(--color-stroke, $light-grey);
 
   @media (max-width: $tablet-width - 1) {
     padding-top: 24px;
@@ -89,7 +89,7 @@
 
   font-size: rem(14px);
   line-height: 1.3;
-  color: var(--color-text-caption);
+  color: var(--color-text, $grey-default);
 
   &::before {
     content: "";
