--- a/source/sass/blocks/page-top.scss
+++ b/source/sass/blocks/page-top.scss
@@ -12,7 +12,7 @@
 
 .page-top__form-wrapper {
   padding: 25px 40px;
-  background-color: var(--color-bg-secondary);
+  background-color: var(--color-bg-secondary, $color-bg);
   border-radius: 5px;
 
   @media (max-width: $tablet-width - 1) {
