--- a/source/sass/blocks/project-link.scss
+++ b/source/sass/blocks/project-link.scss
@@ -15,7 +15,7 @@
 
   @include font-h4;
   text-decoration: none;
-  color: var(--color-interactive-default);
+  color: var(--color-interactive-default, $blue-default);
 
   transition: color $style-change-duration;
 
@@ -32,6 +32,6 @@
 
   &:hover,
   &:focus {
-    color: var(--color-interactive-accent);
+    color: var(--color-interactive-accent, $blue-accent);
   }
 }
