--- a/source/sass/blocks/project.scss
+++ b/source/sass/blocks/project.scss
@@ -124,7 +124,7 @@
   width: calc(50% - 4px);
   margin-bottom: 8px;
 
-  background-color: var(--color-bg-secondary);
+  background-color: var(--color-bg-secondary, $color-bg);
   border-radius: $border-radius;
 
   transition: box-shadow $style-change-duration linear;
@@ -143,7 +143,7 @@
     box-shadow: 0 2px 4px rgba(0, 30, 75, 0.15);
 
     .project__name {
-      color: var(--color-interactive-default);
+      color: var(--color-interactive-default, $blue-default);
     }
   }
 }
@@ -203,9 +203,9 @@
 
   font-size: rem(18px);
   line-height: 1.3;
-  color: var(--color-text-caption);
+  color: var(--color-text, $grey-default);
 
-  background-color: var(--color-bg-main);
+  background-color: var(--color-bg-main, $white);
   border-radius: 50%;
 }
 
