--- a/source/sass/blocks/special-popup.scss
+++ b/source/sass/blocks/special-popup.scss
@@ -21,7 +21,7 @@
   margin: 0 auto;
   padding: 40px;
 
-  background-color: var(--color-bg-main);
+  background-color: var(--color-bg-main, $white);
   border-radius: 0 0 4px 4px;
   box-shadow: 0 4px 15px rgba(46, 67, 102, 0.1);
 
@@ -44,7 +44,7 @@
   margin: 0;
   padding: 0;
 
-  color: var(--color-text-main);
+  color: var(--color-text, $dark-text);
 
   background-color: transparent;
   border: none;
@@ -64,7 +64,7 @@
   }
 
   &:hover {
-    color: var(--color-interactive-accent);
+    color: var(--color-interactive-accent, $blue-accent);
   }
 
   svg {
@@ -123,7 +123,7 @@
 
   list-style: none;
 
-  border-bottom: 1px solid var(--color-stroke);
+  border-bottom: 1px solid var(--color-stroke, $light-grey);
 
   @include tablet {
     width: fit-content;
@@ -194,7 +194,7 @@
   height: 44px;
 
   background-color: $light-grey;
-  border: 1px solid var(--color-stroke);
+  border: 1px solid $light-grey;
   border-radius: 4px;
 
   &--S {
@@ -232,7 +232,7 @@
   border-radius: 4px;
 
   &.active {
-    border-color: var(--color-text-main);
+    border-color: var(--color-text, $dark-text);
 
     &::after {
       content: "";
