--- a/source/sass/blocks/user-menu.scss
+++ b/source/sass/blocks/user-menu.scss
@@ -66,7 +66,7 @@
   box-sizing: border-box;
   width: 300px;
   padding-left: 32px;
-  background-color: var(--color-bg-main);
+  background-color: var(--color-bg-main, $white);
   border-radius: $border-radius;
   box-shadow: 0 2px 10px rgba(46, 67, 102, 0.1);
 }
@@ -84,7 +84,7 @@
 
 .user-menu__item {
   &:not(:last-child) {
-    border-bottom: 1px solid var(--color-stroke);
+    border-bottom: 1px solid var(--color-stroke, $light-grey);
   }
 }
 
