--- a/source/sass/blocks/vote-results.scss
+++ b/source/sass/blocks/vote-results.scss
@@ -14,7 +14,7 @@
   margin-top: 13px;
   width: 100%;
   height: 10px;
-  background-color: var(--color-interactive-light-accent);
+  background-color: var(--color-interactive-accent, $light-blue-accent);
   border-radius: $border-radius;
   overflow: hidden;
 }
@@ -22,5 +22,5 @@
 .vote-results__indicator {
   width: 0;
   height: 100%;
-  background-color: var(--color-interactive-default);
+  background-color: var(--color-interactive-default, $blue-default);
 }
