--- a/source/sass/blocks/special-popup.scss
+++ b/source/sass/blocks/special-popup.scss
@@ -197,15 +197,15 @@
   border: 1px solid $light-grey;
   border-radius: 4px;
 
-  &--S {
+  &--default {
     font-size: 18px;
   }
 
-  &--M {
+  &--larger {
     font-size: 24px;
   }
 
-  &--L {
+  &--largest {
     font-size: 32px;
   }
 
@@ -219,7 +219,7 @@
       width: 100%;
       height: 5px;
 
-      background-color: var(--color-interactive-default);
+      background-color: var(--color-interactive-default, $blue-default);
     }
   }
 }
@@ -243,7 +243,7 @@
       width: 100%;
       height: 5px;
 
-      background-color: var(--color-interactive-default);
+      background-color: var(--color-interactive-default, $blue-default);
     }
   }
 
@@ -296,7 +296,7 @@
       width: 100%;
       height: 5px;
 
-      background-color: var(--color-interactive-default);
+      background-color: var(--color-interactive-default, $blue-default);
     }
   }
 }
