--- a/source/sass/blocks/page-404.scss
+++ b/source/sass/blocks/page-404.scss
@@ -2,13 +2,13 @@
   padding-top: 16vh;
   padding-bottom: 14vh;
 
-  @media (max-width: $tablet-width - 1) {
-    padding-top: 88px;
+  @include tablet {
+    padding-top: 66px;
     padding-bottom: 88px;
   }
 
-  @media (max-width: 400px) {
-    padding-top: 76px;
+  @include mobile {
+    padding-top: 56px;
     padding-bottom: 64px;
   }
 }
@@ -20,33 +20,34 @@
   justify-content: center;
   align-items: center;
 
-  & svg {
-    width: 400px;
-    height: 165px;
+  & h1 {
+    margin: 0;
+    font-weight: 300;
+    font-size: 230px;
+    line-height: 1;
 
-    @media (max-width: $tablet-width - 1) {
-      width: 286px;
-      height: 117px;
+    @include tablet {
+      font-size: 164px;
     }
 
-    @media (max-width: 400px) {
-      width: 208px;
-      height: 85px;
+    @include mobile {
+      font-size: 120px;
     }
   }
 
   & p {
     @include font-h2;
-    margin-top: 40px;
+    margin-top: 5px;
     margin-bottom: 72px;
 
-    @media (max-width: $tablet-width - 1) {
+    @include tablet {
       @include font-h3;
+      margin-top: 15px;
     }
 
-    @media (max-width: 400px) {
+    @include mobile {
       @include font-h4;
-      margin-top: 32px;
+      margin-top: 14px;
       margin-bottom: 47px;
     }
   }
@@ -56,7 +57,7 @@
   padding-left: 60px;
   padding-right: 60px;
 
-  @media (max-width: 400px) {
+  @include mobile {
     width: 100%;
     padding-left: 30px;
     padding-right: 30px;
