--- a/source/sass/blocks/special-popup.scss
+++ b/source/sass/blocks/special-popup.scss
@@ -118,7 +118,9 @@
   position: relative;
 
   display: flex;
+  // flex-wrap: wrap;
   margin: 0;
+  // padding: 0;
   padding: 0 0 24px;
 
   list-style: none;
@@ -141,6 +143,8 @@
 
 .special-popup__item {
   flex-shrink: 0;
+  // padding-bottom: 24px;
+  // border-bottom: 1px solid var(--color-stroke, $light-grey);
 
   &:not(:last-child) {
     margin-right: 16px;
